style.css
html body {
    margin: 0px;
    padding: 0px;
    font-size: 14px;
    background: #fff;
}

.wrapper {
    padding: 30px 0px;
}

.btn {
    margin: 4px 2px;
    padding: 10px 15px;
}

.score {
    margin: 30px 0px;
}

.score .col {
    margin-top: 10px;
}

.btn,
.card-header {
    letter-spacing: 1px;
    text-transform: uppercase;    
}

.alert-danger,
.alert-success,
.alert-warning {
    display: none;
}

#player-choice,
#computer-choice {
    text-transform: capitalize !important;
}

